		* Created Proxy dialog on preferences.
		* Updated muuli.wdr for wxDesigner version 2.11 -- no more
		  manual patching for wxFIXED_MINSIZE required.
		* Fix for rommel's report of IP filter problem.

	Ken:
		* Fixed Mac bug: window was a little larger each restart
		* Fixed aMule.tmpl so Safari can work with amuleweb
		* On Mac, enabled Command-clicking in lists to toggle selection

	Special Thanks To:
		* Bug and feature reporters:
		rommel

--------------------------------------------------------------------------------

Version 2.0.0rc8 - The "last rc" version.
----------
2004-12-21

	Baz:
		* Fix for server stats for users/files not being updated correctly.
		* Fix for ERROR and WARNING server messages not being shown.
		* Fixed server / transfers window splitters not being loaded/saved correctly.
		* Fixed categories on search dialog not being refreshed on category name change.

	deltaHF: 
		* Show comments for shared files

	Hetfield:
		* Some fix in new Tray system and desktopMode bypass

	Jacobo221:
		* Added option to select the max and min size-type in advanced
		  searches.
		* When "Extended Parameters" in Search tab is not selected, 
		  defaults are used.
		* Now "Auto-update serverlist at startup" checks if there's a 
		  serverlist to avoid annoying messages at startup.
		* "Clear completed downloads" is now disabled while no
		  completed downloads are listed.
		* Context menu for download items only enables relevant
		  information now.
		* Context menu little optimization (removed an unuseful loop)
		  and Open File fix.
		* Added bitmap button wich pops-up the last status log line
		  (useful when it doesn't fit the window).
		* Merged Preview and Open File and enabled Open File.
		* New Port column in Servers tab (splitting IP column).
		* Moved "Always filter bad IPs" from Server to Security
		  in Preferences.
		* Changed "Preference" in servers tab as suggested by Sir and
		  "IP" to "Address" since that's more accurate (could be DNS).